--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,6 +79,10 @@ input, select, textarea {
 	appearance: none;
 }
 
+introIcon {
+	
+}
+
 /* Basic */
 
 	@-ms-viewport {
@@ -2895,20 +2899,20 @@ input, select, textarea {
 			.statistics li strong, .statistics li b {
 				display: block;
 				font-size: 2em;
-				line-height: 1.1;
+				line-height: 1.3;
 				color: inherit !important;
 				font-weight: 300;
 				letter-spacing: -0.025em;
 			}
 
 			.statistics li:first-child {
-				border-top-left-radius: 8px;
+				border-top-left-radius: 100px;
 				border-bottom-left-radius: 8px;
 			}
 
 			.statistics li:last-child {
 				border-top-right-radius: 8px;
-				border-bottom-right-radius: 8px;
+				border-bottom-right-radius: 100px;
 			}
 
 			.statistics li .icon {
