Updated contact me + resume

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,11 +43,14 @@
       <p>
         I'm Chris Kang, a Computer Science / Economics / Mathematics major at the University of Washington, Seattle.
       </p>
-      <h5>
-        Contact me
-      </h5>
       <p>
-        ck32@uw.edu
+        <a href="\assets\papers\Kang_Resume.pdf"><strong>Resume</strong></a>
+      </p>
+      <h3>
+        Contact me
+      </h3>
+      <p>
+        <a href="mailto:ck32@uw.edu">ck32@uw.edu</a>
       </p>
     </header>
     <section>
