--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,14 +41,8 @@
       </ul>
       {% endif %}
       <p>
-        I'm Chris Kang, a Computer Science / Economics / Mathematics major at the University of Washington, Seattle.
+        <a href="\assets\papers\Kang_Resume.pdf">Resume</a>
       </p>
-      <p>
-        <a href="\assets\papers\Kang_Resume.pdf"><strong>Resume</strong></a>
-      </p>
-      <h3>
-        Contact me
-      </h3>
       <p>
         <a href="mailto:ck32@uw.edu">ck32@uw.edu</a>
       </p>
