--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
   </script>
   {% endif %}
   
-  <script>
+  <script type="text/javascript">
   $("script[type='math/tex']").replaceWith(
   function(){
     var tex = $(this).text();
