Updated resume, Linkedin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,10 @@
       </ul>
       {% endif %}
       <p>
-        <a href="\assets\papers\Kang_Resume.pdf">Resume</a>
+        <a href="\assets\papers\Kang_Resume2021.pdf">Resume</a>
+      </p>
+      <p>
+        <a href="https://www.linkedin.com/in/christopher-kang/">LinkedIn</a>
       </p>
       <p>
         <a href="mailto:ck32@uw.edu">ck32@uw.edu</a>
