--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,9 @@
       <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
       {% if site.logo %}
-      <img src="{{site.logo | relative_url}}" alt="Logo" />
+      <a href="https://goo.gl/maps/RePqHWf3EmxZ38vK8">
+        <img src="{{site.logo | relative_url}}" alt="Profile image"/>
+      </a>
       {% endif %}
 
       <p>{{ site.description | default: site.github.project_tagline }}</p>
