--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,9 @@
       </ul>
       {% endif %}
       <p>
+        <a href="\assets\papers\Kang_CV_Su21.pdf">CV</a>
+      </p>
+      <p>
         <a href="\assets\papers\Kang_Resume2021.pdf">Resume</a>
       </p>
       <p>
