--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
         <a href="\assets\papers\Kang_CV_Su21.pdf">CV</a>
       </p>
       <p>
-        <a href="\assets\papers\Kang_Resume2021.pdf">Resume</a>
+        <a href="\assets\papers\Kang_Resume_22_Jan.pdf">Resume</a>
       </p>
       <p>
         <a href="https://www.linkedin.com/in/christopher-kang/">LinkedIn</a>
