--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
       </ul>
       {% endif %}
       <p>
-        <a href="\assets\papers\Kang_CV_Su21.pdf">CV</a>
+        <a href="\assets\papers\Kang_CV_Au21.pdf">CV</a>
       </p>
       <p>
         <a href="\assets\papers\Kang_Resume_22_Jan.pdf">Resume</a>
