--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,119 +1,117 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="{{ site.lang | default: " en-US " }}">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  {% seo %}
-  <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-  <!--[if lt IE 9]>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> {% seo %}
+    <link rel="stylesheet" href="{{ " /assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-  
-  <!-- Load jQuery -->
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-  <!-- Load KaTeX -->
-<!--   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.1.1/katex.min.css"> -->
-<!--   <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.1.1/katex.min.js"></script> -->
-  
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
+
+    <!-- Load jQuery -->
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <!-- Load KaTeX -->
+    <!--   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.1.1/katex.min.css"> -->
+    <!--   <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.1.1/katex.min.js"></script> -->
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 
     <!-- The loading of KaTeX is deferred to speed up page rendering -->
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js" integrity="sha384-g7c+Jr9ZivxKLnZTDUhnkOnsh30B4H0rpLUpJ4jAIKs4fnJI+sEnkvrMWph2EDg4" crossorigin="anonymous"></script>
 
     <!-- To automatically render math in text elements, include the auto-render extension: -->
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js" integrity="sha384-mll67QQFJfxn0IYznZYonOWZ644AWYC+Pt2cHqMaRhXVrursRwvLnLaebdGIlYNa" crossorigin="anonymous"
-        onload="renderMathInElement(document.body);"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js" integrity="sha384-mll67QQFJfxn0IYznZYonOWZ644AWYC+Pt2cHqMaRhXVrursRwvLnLaebdGIlYNa" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 </head>
 
 <body>
-  <div class="wrapper">
-    <header>
-      <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+    <div class="wrapper">
+        <header>
+            <h1><a href="{{ " / " | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
-      {% if site.logo %}
-      <a href="https://goo.gl/maps/RePqHWf3EmxZ38vK8">
-        <img src="{{site.logo | relative_url}}" alt="Profile image"/>
-      </a>
-      {% endif %}
+            {% if site.logo %}
+            <a href="https://goo.gl/maps/RePqHWf3EmxZ38vK8">
+                <img src="{{site.logo | relative_url}}" alt="Profile image" />
+            </a>
+            {% endif %}
 
-      <p>{{ site.description | default: site.github.project_tagline }}</p>
+            <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-      {% if site.github.is_project_page %}
-      <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub
+            {% if site.github.is_project_page %}
+            <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub
           <small>{{ site.github.repository_nwo }}</small></a></p>
-      {% endif %}
+            {% endif %} {% if site.github.is_user_page %}
+            <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+            {% endif %} {% if site.show_downloads %}
+            <ul class="downloads">
+                <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
+                <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
+                <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+            </ul>
+            {% endif %}
+            <p>
+                <a href="\assets\papers\Kang_CV_Wi22.pdf">CV</a>
+            </p>
+            <p>
+                <a href="\assets\papers\Kang_Resume_22_Jan.pdf">Resume</a>
+            </p>
+            <p>
+                <a href="https://www.linkedin.com/in/christopher-kang/">LinkedIn</a>
+            </p>
+            <p>
+                <a href="mailto:ck32@uw.edu">ck32@uw.edu</a>
+            </p>
+        </header>
+        <section>
 
-      {% if site.github.is_user_page %}
-      <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-      {% endif %}
+            {{ content }}
 
-      {% if site.show_downloads %}
-      <ul class="downloads">
-        <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-        <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-        <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-      </ul>
-      {% endif %}
-      <p>
-        <a href="\assets\papers\Kang_CV_Au21.pdf">CV</a>
-      </p>
-      <p>
-        <a href="\assets\papers\Kang_Resume_22_Jan.pdf">Resume</a>
-      </p>
-      <p>
-        <a href="https://www.linkedin.com/in/christopher-kang/">LinkedIn</a>
-      </p>
-      <p>
-        <a href="mailto:ck32@uw.edu">ck32@uw.edu</a>
-      </p>
-    </header>
-    <section>
+        </section>
+        <footer>
+            {% if site.github.is_project_page %}
+            <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+            {% endif %}
+            <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
+            </p>
+        </footer>
+    </div>
+    <script src="{{ " /assets/js/scale.fix.js " | relative_url }}"></script>
+    {% if site.google_analytics %}
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', '{{ site.google_analytics }}', 'auto');
+        ga('send', 'pageview');
+    </script>
+    {% endif %}
 
-      {{ content }}
+    <script type="text/javascript">
+        $("script[type='math/tex']").replaceWith(
+            function() {
+                var tex = $(this).text();
+                return "<span class=\"inline-equation\">" +
+                    katex.renderToString(tex) +
+                    "</span>";
+            });
 
-    </section>
-    <footer>
-      {% if site.github.is_project_page %}
-      <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-      {% endif %}
-      <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
-      </p>
-    </footer>
-  </div>
-  <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-  {% if site.google_analytics %}
-  <script>
-    (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    ga('create', '{{ site.google_analytics }}', 'auto');
-    ga('send', 'pageview');
-  </script>
-  {% endif %}
-  
-  <script type="text/javascript">
-  $("script[type='math/tex']").replaceWith(
-  function(){
-    var tex = $(this).text();
-    return "<span class=\"inline-equation\">" + 
-           katex.renderToString(tex) +
-           "</span>";
-  });
-
-  $("script[type='math/tex; mode=display']").replaceWith(
-    function(){
-      var tex = $(this).text();
-      return "<div class=\"equation\">" + 
-             katex.renderToString("\\displaystyle "+tex) +
-             "</div>";
-  });
-  </script>
+        $("script[type='math/tex; mode=display']").replaceWith(
+            function() {
+                var tex = $(this).text();
+                return "<div class=\"equation\">" +
+                    katex.renderToString("\\displaystyle " + tex) +
+                    "</div>";
+            });
+    </script>
 </body>
 
 </html>
