--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
         <a href="https://www.linkedin.com/in/christopher-kang/">LinkedIn</a>
       </p>
       <p>
-        <a href="mailto:ck32@uw.edu">ck32@uw.edu</a>
+        <a href="mailto:ctkang@uchicago.edu">ctkang@uchicago.edu</a>
       </p>
     </header>
     <section>
