--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
       </ul>
       {% endif %}
       <p>
-        <a href="\assets\papers\Kang_CV_Su23.pdf">CV</a>
+        <a href="\assets\papers\Kang_Christopher_CV_251023.pdf">CV</a>
       </p>
       <p>
         <a href="\assets\papers\Kang_Resume_22_Jan.pdf">Resume</a>
